<resources>
    <string name="app_name">S.R. Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="promptEmail">Correo Electrónico</string>
    <string name="promptPassword">Contraseña</string>
    <string name="promptPasswordConfirmation">Confirmar Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="label_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="promptName">Nombre Completo</string>
    <string name="btnRegister">Confirmar Registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor introduce tus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointment">Mis citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="promptDescription">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type1">Consulta</string>
    <string name="label_type2">Exámen</string>
    <string name="label_type3">Operación</string>
    <string name="label_appointment_type">Tipo de Consulta</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_appointment_date">Fecha de la cita</string>
    <string name="label_hours">Hora de atención</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="item_appointnment_id">Cita médica #%1$d</string>
    <string name="item_appointnment_date">Cita par el dia %1$s</string>
    <string name="item_appointnment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis Citas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estas seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habias ingresado se perderán.</string>
    <string name="dialog_create_appointment_exit_positive_btn">Sí, Salir</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar registro</string>
    <string name="validate_create_appointment_description">La descripción es demasiado corta</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_create_appointment_date">" Es necesario seleccionar una fecha"</string>
    <string name="validate_create_appointment_time">Es necesario selecionar una hora</string>
    <string name="error_loading_specialties">Ocurrió un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrio un problema cargando los médicos</string>
    <string name="error_loading_hours">No se ha podido cargar las horas</string>
    <string name="label_select_doctor_and_date">Selecciona un médico y una fecha para ver sus horas disponibles.</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles para el médico en la fecha seleccionada.</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y una contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="text_appointment_date">Esta cita se registró el dia %1$s con la siguiente descripción:</string>
    <string name="create_appointment_success">Cita registrada correctamente</string>
    <string name="create_appointment_error">Ocurrió un error inesperado registrando la cita médica.</string>
    <string name="error_register_empty_fields">Por favor complete todos los campos</string>
    <string name="error_register_passwords_do_dot_match">Las contraseñas no son iguales</string>
    <string name="error_register_validation">Ocurrió un error al hacer el registro</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="btn_edit_profile">editar perfil</string>
    <string name="label_edit_profile">Editar Datos Básicos</string>
    <string name="label_Phone">Número de teléfono</string>
    <string name="label_address">Dirección</string>
    <string name="btn_save">guardar cambios</string>
    <string name="profile_success_message">Los cambios se han guardado correctamente.</string>
    <string name="error_profile_name">El nombre ingresado es demasiado corto.</string>
    <string name="you_need_a_phone">Es necesario asociar primero un teléfono a tu cuenta</string>
</resources>