<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvStep1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/promptDescription"
            android:autofillHints=""
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_specialty"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spinnerSpecialties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_appointment_type"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="match_parent"
            android:checkedButton="@id/rbType1"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbType1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_type1"/>
            <RadioButton
                android:id="@+id/rbType2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_type2"/>
            <RadioButton
                android:id="@+id/rbType3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_type3"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="bottom"
            app:icon="@drawable/ic_navigate_next"
            app:iconGravity="end"
            style="@style/MenuButton"
            android:text="@string/btn_next" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
