<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".ui.MenuActivity">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center_horizontal"
    android:paddingTop="30dp"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:text="@string/label_welcome" />

    <Button
            android:id="@+id/btnCreateAppointment"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            app:icon="@drawable/ic_add_circle"
            style="@style/MenuButton"
            android:text="@string/btn_create_appointment" />

    <Button android:id="@+id/btnMyAppointment"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:layout_marginTop="8dp"
            app:icon="@drawable/ic_appointment"
            android:text="@string/btn_my_appointment" />

     <Button android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:layout_marginTop="8dp"
            app:icon="@drawable/ic_power_off"
            android:text="@string/btn_log_out" />

</LinearLayout>