<?xml version="1.0" encoding="utf-8"?>
<LinearLayout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/login_background"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/label_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_viewReg"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/promptName"
                    android:inputType="textPersonName" />
                <EditText
                    android:id="@+id/etRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/promptEmail"
                    android:inputType="textEmailAddress" />
                <EditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/promptPassword"
                    android:inputType="textPassword"/>
                <EditText
                    android:id="@+id/etRegisterPasswordConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/promptPasswordConfirmation"
                    android:inputType="textPassword"/>
                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="8dp"
                    android:theme="@style/Theme.MyAppointments"
                    android:text="@string/btnRegister" />

                <TextView
                    android:id="@+id/tvGoToLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="10dp"
                    android:text="@string/label_go_to_login" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>