<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="10dp"
    android:animateLayoutChanges="true"
    tools:context=".CreateAppointmentActivity">

     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/label_create_appointment" />

      <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/promptDescription"
                android:autofillHints=""
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/label_specialty"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerSpecialties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_appointment_type"
                android:textSize="18sp"/>

            <RadioGroup
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <RadioButton
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/label_type1"/>
               <RadioButton
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/label_type2"/>
               <RadioButton
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/label_type3"/>
             </RadioGroup>

             <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="bottom"
                app:icon="@drawable/ic_navigate_next"
                app:iconGravity="end"
                style="@style/MenuButton"
                android:text="@string/btn_next" />

        </LinearLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardCornerRadius="8dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="10dp"
             android:gravity="center_vertical">

             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_doctor"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerDoctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etScheduledDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:autofillHints=""
                android:hint="@string/label_appointment_date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/label_hours"
                android:gravity="center"
                android:textSize="18sp"/>

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingStart="30dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/rgLeft"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:00 AM"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/rgRight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingStart="20dp">
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:00 AM"/>

                        </LinearLayout>

                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

                <Button
                        android:id="@+id/btConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        app:icon="@drawable/ic_check"
                        app:iconGravity="end"
                        style="@style/MenuButton"
                        android:text="@string/btn_confirm" />
         </LinearLayout>
      </androidx.cardview.widget.CardView>

</LinearLayout>