<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/login_background"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/label_login" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="vertical"
       android:padding="8dp">

       <androidx.cardview.widget.CardView
           android:id="@+id/card_view"
           android:layout_gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardCornerRadius="8dp">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="6dp"
               android:orientation="vertical">

               <EditText
                   android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/promptEmail"
                    android:inputType="textEmailAddress" />
               <EditText
                   android:id="@+id/etPassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:autofillHints=""
                   android:hint="@string/promptPassword"
                   android:inputType="textPassword"/>
               <Button
                   android:id="@+id/btnLogin"
                   android:layout_width="match_parent"
                   android:layout_height="65dp"
                   android:layout_marginTop="8dp"
                   android:text="@string/btnLogin" />

               <TextView
                   android:id="@+id/tvGoToRegister"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:layout_marginTop="8dp"
                   android:paddingBottom="10dp"
                   android:text="@string/label_go_to_register" />

            </LinearLayout>
       </androidx.cardview.widget.CardView>

   </LinearLayout>

</LinearLayout>