<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cvStep3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text ="@string/label_confirm_appointment_data"
                    android:textStyle="bold"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/promptDescription"/>
                    <TextView
                        android:id="@+id/confirmDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="Descripcion"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/label_specialty"/>
                    <TextView
                        android:id="@+id/confirmSpecialty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="Especialidad"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/label_appointment_type"/>
                    <TextView
                        android:id="@+id/confirmType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="Consulta"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/label_doctor"/>
                    <TextView
                        android:id="@+id/confirmDoctor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="Medico Test"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/label_appointment_date"/>
                    <TextView
                        android:id="@+id/confirmDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="2021-04-08" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/label_hours"/>
                    <TextView
                        android:id="@+id/confirmHour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="09:30 AM"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="bottom"
                    app:icon="@drawable/ic_navigate_next"
                    app:iconGravity="end"
                    style="@style/MenuButton"
                    android:text="@string/btn_next" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>
