<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAppointmentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    tools:context=".ui.ProfileActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/label_edit_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:cardCornerRadius="8dp">
        <ProgressBar
            android:id="@+id/progressBarProfile"
            tools:visibility="gone"
            android:layout_width="match_parent"
            android:background="@color/teal_200"
            android:indeterminateTint="@color/white"
            android:layout_height="100dp"/>

        <LinearLayout
            android:id="@+id/linearLayoutProfile"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/promptName"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_Phone"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_address"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                style="@style/MenuButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="bottom"
                android:text="@string/btn_save"
                app:icon="@drawable/ic_save"
                app:iconGravity="start" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
